# bazel-rust-analyzer-test

./: .gitignore  MODULE.bazel  README.md  main.rs  vscode-rust-analyzer-diagnostic-lingering.webm
